tests/baselines/reference/exportNamespace3.errors.txt
d.ts(2,7): error TS2339: Property 'A' does not exist on type 'typeof import("b")'.


==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export type { A } from './a';
    
==== c.ts (0 errors) ====
    export * as a from './b';
    
==== d.ts (1 errors) ====
    import { a } from './c';
    new a.A(); // Error
          ~
!!! error TS2339: Property 'A' does not exist on type 'typeof import("b")'.
    